force-app/main/default/objects/DefaultCampaignMemberStatus__mdt/DefaultCampaignMemberStatus__mdt.object-meta.xml
<CustomObject>
    <description>Used to create campaign member statuses upon campaign creation</description>
    <label>Default Campaign Member Status</label>
    <pluralLabel>Default Campaign Member Statuses</pluralLabel>
</CustomObject>