force-app/main/default/objects/DefaultCampaignMemberStatus__mdt/fields/HasResponded__c.field-meta.xml
<CustomField>
    <fullName>HasResponded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this status is equivalent to “Responded” (true) or not (false). Beginning with API version 39.0, at least one CampaignMemberStatus on each campaign must have a hasResponded value of true.</description>
    <inlineHelpText>Indicates whether this status is equivalent to “Responded” (true) or not (false). Beginning with API version 39.0, at least one CampaignMemberStatus on each campaign must have a hasResponded value of true.</inlineHelpText>
    <label>Has Responded</label>
    <type>Checkbox</type>
</CustomField>