force-app/main/default/objects/DefaultCampaignMemberStatus__mdt/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this status is the default status (true) or not (false). Beginning with API version 39.0, there must be a default CampaignMemberStatus defined for every campaign</description>
    <inlineHelpText>Indicates whether this status is the default status (true) or not (false). Beginning with API version 39.0, there must be a default CampaignMemberStatus defined for every campaign</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>