force-app/main/default/objects/DefaultCampaignMemberStatus__mdt/fields/RemoveStandardStatus__c.field-meta.xml
<CustomField>
    <fullName>RemoveStandardStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Standard Status</label>
    <type>Checkbox</type>
</CustomField>