force-app/main/default/objects/DefaultCampaignMemberStatus__mdt/fields/StandardSentOrRespondedStatus__c.field-meta.xml
<CustomField>
    <fullName>StandardSentOrRespondedStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard &apos;Sent&apos; or &apos;Responded&apos; Status</label>
    <type>Checkbox</type>
</CustomField>