force-app/main/default/objects/DefaultCampaignMemberStatus__mdt/fields/StatuesName__c.field-meta.xml
<CustomField>
    <fullName>StatuesName__c</fullName>
    <label>Statues Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>